# atlas-ansible-utils

./: .ansible-lint.yml  .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ansible.cfg  backups_restore_routine.yml  caddy.yml  catalog-info.yaml  clickhouse.yml  elasticsearch_7_10.yml  entrypoint.sh  hosts.ini  index.yaml  mongo_4_2.yml  mongo_4_4.yml  mongo_5_0.yml  mongo_7_0.yml  mongo_backup.yml  mongo_backup_restore.yml  mongo_backups_restore_routine.yml  mongo_restore.yml  mysql_5_7.yml  mysql_8_0.yml  mysql_8_4.yml  mysql_backup.yml  mysql_backup_restore.yml  mysql_restore.yml  percona_5_7.yml  pyproject.toml  redis_6_2.yml  redis_7_2.yml  release.toml  requirements.yml  test_os_info.yml
.github/workflows/: bump_version.yml  ci.yml  docker-build.yml  integration-test.yml  release.yml
changelog.d/: 20260611_085007_moises.gonzalez_node_exporter.md  20260617_clickhouse_backup.md
changelog_templates/: CHANGELOG.md.j2
charts/: Chart.yaml
charts/ansible-runner/: Chart.yaml  values.yaml
molecule/caddy/: converge.yml  molecule.yml  verify.yml
molecule/clickhouse/: converge.yml  molecule.yml  verify.yml
playbooks/: caddy.yml  clickhouse.yml  clickhouse_backup.yml  clickhouse_docker.yml  clickhouse_local.yml  docker_haproxy.yml  docker_mongo.yml  docker_mysql.yml  elasticsearch_7.yml  meilisearch.yml  mongo_4_4.yml  mongo_7_0.yml  mysql_8_4.yml  node_exporter.yml  redis_6_2.yml  redis_7.yml  redis_7_4.yml
requirements/: base.in  base.txt  dev-constraints.txt  dev.in  dev.txt  pip-tools.txt
roles/caddy/: README.md
scripts/: ssm-smoke-test.sh
(+199 files in other folders)
